--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <title>hello</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body></body>
 </html>
